--- a/src/App.css
+++ b/src/App.css
@@ -7,11 +7,15 @@
   flex: 5;
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
 }
 
 .side-bar {
   flex: 2;
+  background: black;
+  height: 100vh;
 }
+
 
 /* Mana Buttons CSS */
 .white {
@@ -43,4 +47,19 @@
   height:100px;
   width: 100px;
   cursor: pointer;
+  margin: 10px 0px;
 }
+
+.card-color-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.checked {
+  height: 120px;
+  width:120px;
+  border: 2px solid white;
+  border-radius: 50%
+}
+
