--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,9 @@
   height: 100vh;
 }
 
+.card-item{
+  cursor: pointer;
+}
 
 /* Mana Buttons CSS */
 .white {
@@ -50,7 +53,7 @@
 }
 
 .mana-button {
-  height:100px;
+  height: 100px;
   width: 100px;
   cursor: pointer;
   margin: 10px 0px;
@@ -65,7 +68,21 @@
 .checked {
   height: 120px;
   width:120px;
-  border: 2px solid white;
   border-radius: 50%
 }
 
+.glow-white {
+  box-shadow: 0px 0px 40px 20px white;
+}
+.glow-blue {
+  box-shadow: 0px 0px 40px 20px blue;
+}
+.glow-black {
+  box-shadow: 0px 0px 40px 20px grey;
+}
+.glow-red {
+  box-shadow: 0px 0px 40px 20px red;
+}
+.glow-green {
+  box-shadow: 0px 0px 40px 20px green;
+}
