--- a/src/App.css
+++ b/src/App.css
@@ -56,7 +56,7 @@
   height: 100px;
   width: 100px;
   cursor: pointer;
-  margin: 10px 0px;
+  margin: 20px 0px;
 }
 
 .card-color-container {
@@ -72,17 +72,17 @@
 }
 
 .glow-white {
-  box-shadow: 0px 0px 40px 20px white;
+  box-shadow: 0px 0px 30px 10px #FFFBD8;
 }
 .glow-blue {
-  box-shadow: 0px 0px 40px 20px blue;
+  box-shadow: 0px 0px 30px 10px #ACE0F9;
 }
 .glow-black {
-  box-shadow: 0px 0px 40px 20px grey;
+  box-shadow: 0px 0px 30px 10px #CCC2C0;
 }
 .glow-red {
-  box-shadow: 0px 0px 40px 20px red;
+  box-shadow: 0px 0px 30px 10px #F9C8C1;
 }
 .glow-green {
-  box-shadow: 0px 0px 40px 20px green;
+  box-shadow: 0px 0px 30px 10px #9DD2AF;
 }
