--- a/src/App.css
+++ b/src/App.css
@@ -86,3 +86,11 @@
 .glow-green {
   box-shadow: 0px 0px 30px 10px #9DD2AF;
 }
+
+button.generate-button {
+  background: transparent;
+  color: white;
+  padding: 16px;
+  font-size: 16px;
+  border: 2px solid white;
+}
