--- a/src/App.css
+++ b/src/App.css
@@ -19,7 +19,10 @@
 .layout-container {
   background-image: url('./images/wood_background.jpg');
   background-size: cover;
-  height: 100vh;
+  min-height: 100vh;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  background-position: center center;
 }
 
 .card-item{
