--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,6 @@
 .side-bar {
   background: black;
   height: 100%;
-  width: 200px;
   position: fixed;
 }
 
@@ -32,46 +31,52 @@
 /* Mana Buttons CSS */
 .white {
   background-image: url('./images/white_mana.png');
-  background-size: cover;
+  background-repeat: no-repeat;
+  background-size: contain;
 }
 
 .black {
   background-image: url('./images/black_mana.png');
-  background-size: cover;
+  background-repeat: no-repeat;
+  background-size: contain;
 }
 
 .blue {
   background-image: url('./images/blue_mana.png');
-  background-size: cover;
+  background-repeat: no-repeat;
+  background-size: contain;
 }
 
 .red {
   background-image: url('./images/red_mana.png');
-  background-size: cover;
+  background-repeat: no-repeat;
+  background-size: contain;
 }
 
 .green {
   background-image: url('./images/green_mana.png');
-  background-size: cover;
+  background-repeat: no-repeat;
+  background-size: contain;
 }
 
 .mana-button {
   height: 100px;
   width: 100px;
   cursor: pointer;
-  margin: 15px 0px;
+  margin: 5px 0px;
 }
 
 .card-color-container {
   display: flex;
   flex-direction: column;
   align-items: center;
+  height: 100vh;
 }
 
 .checked {
-  height: 120px;
-  width:120px;
-  border-radius: 50%
+  height: 105px;
+  width: 105px;
+  border-radius: 50%;
 }
 
 .glow-white {
@@ -93,7 +98,8 @@
 button.generate-button {
   background: transparent;
   color: white;
-  padding: 16px;
+  margin: 0px 10px;
+  padding: 10px;
   font-size: 16px;
   border: 2px solid white;
 }
